Fixed image alignment. Started recipe form

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ html {
 }
 
 header {
+    margin-top: 30px;
     text-align: center;
 }
 
@@ -18,29 +19,63 @@ h2 {
 
 .recipe-menu {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: row;
-    overflow: auto;
-    gap: 10px 20px;
-    align-content: space-between;
-    max-width: 1000px;
+    /* overflow: auto; */
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    margin: 30px auto;
+    margin: 20px auto;
+    margin-bottom: 40px;
     box-shadow: 8px 8px rgb(85, 154, 131, 0.3);
+    padding: 20px 10px;
 }
 
 .recipe-menu .recipe-container img {
-    height: 450px;
+    height: 400px;
     border-radius: 10px;
-    width: 400px;
+    width: 100%;
+    width: 360px;
     box-shadow: 5px 5px rgba(255, 225, 255, 0.6);
     object-fit: cover;
+}
+
+/* ::after creates a pseudo-element. Last child of selected element. */
+.recipe-menu::after {
+    content: "";
+    width: 382px;
 }
 
 .recipe-container p {
     text-align: center;
     margin-top: 10px;
     font-size: 20px;
+}
+
+#main-menu {
+    margin-top: 30px;
+}
+
+form {
+    max-width: 700px;
+    margin-top: 20px;
+}
+
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+input, textarea, select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
+footer {
+    margin-bottom: 20px;
 }
